# dumb-pypi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  RATIONALE.md  README.md  index.html  mypy.ini  requirements-dev.txt  setup.cfg  setup.py  testing.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  publish-github-pages.yaml
changelog/: page3.html  page6.html
ci/: push-github-pages
dumb_pypi/: main.py
dumb_pypi/templates/: _base.html  changelog.html  index.html  package.html  simple.html
lambda/: .gitignore  Makefile  README.md  config.json  handler.py
pypi/2/: json
pypi/2or3/: json
pypi/a10-horizon/: json
pypi/aaargh/: json
pypi/abl-jquery/: json
pypi/abl-util/: json
pypi/adaptfilt/: json
pypi/adspygoogle-dfp/: json
pypi/aino-mutations/: json
pypi/aino-utkik/: json
pypi/aiogen/: json
pypi/alart/: json
pypi/aldryn-bootstrap3/: json
pypi/amalgamate/: json
pypi/amcrest/: json
pypi/aminetoolkit/: json
pypi/analyzers/: json
pypi/anhima/: json
pypi/answers/: json
pypi/apoclaim/: json
pypi/appdo/: json
pypi/aqicn/: json
pypi/arangodb/: json
pypi/arcpylogger/: json
pypi/arun/: json
pypi/asn1ate/: json
pypi/asynchttp/: json
pypi/asyncio-rabbitmq-consumer/: json
pypi/auto-generate-test/: json
pypi/auto-rsync/: json
pypi/autoflake/: json
pypi/automakesetup-py/: json
pypi/autoprefixer/: json
pypi/avos/: json
pypi/awss3filebrowser/: json
pypi/backpack/: json
pypi/bacon/: json
pypi/ballpark/: json
pypi/bda-bfg-tile/: json
pypi/bdbcontrib/: json
pypi/bedrock/: json
pypi/between/: json
pypi/beyondskins-ploneday-site2009/: json
pypi/beyondskins-ploneday-site2010/: json
pypi/beyondskins-pythonbrasil-site/: json
pypi/bgframework/: json
pypi/bgpdumpy/: json
pypi/bigdoorkit/: json
pypi/bigstash/: json
pypi/bitmapindex/: json
pypi/bitrix24-python-sdk/: json
pypi/bob-learn-boosting/: json
pypi/bob-learn-mlp/: json
pypi/bob-sp/: json
pypi/bobtemplates-bsuttor/: json
pypi/bofhexcuse/: json
pypi/bompy/: json
pypi/botje/: json
pypi/botodesu/: json
pypi/bottle/: json
pypi/bottle-haml/: json
pypi/bpformation/: json
pypi/brain/: json
pypi/brotlipy/: json
pypi/brownfox/: json
pypi/browserstacker/: json
pypi/bst-pygasus-i18n/: json
pypi/btchip-python/: json
pypi/buildbot-waterfall-view/: json
pypi/buildout-locallib/: json
pypi/bw-stats-toolkit/: json
pypi/bw2restapi/: json
pypi/byrlogin/: json
pypi/c2-recipe-bkups3/: json
pypi/caatinga/: json
pypi/cachebust/: json
pypi/canarytools/: json
pypi/canaryusermodule/: json
pypi/captcha/: json
pypi/captureth/: json
pypi/cdat-lite/: json
pypi/cdochain/: json
pypi/cec2005real/: json
pypi/celery-redundant-scheduler/: json
pypi/cernservicexml/: json
pypi/certbot-external-auth/: json
pypi/cfn-pyplates/: json
pypi/chargehound/: json
pypi/chatterbot-weather/: json
pypi/chemesis3/: json
pypi/cherrypy-psycopg2-crud/: json
pypi/chileatiende/: json
pypi/chirpsdk/: json
pypi/choix/: json
pypi/chrome-edit-server-gmail-filter/: json
pypi/chromosomer/: json
pypi/cini/: json
simple/: index.html
test-repo/: index.html
testing/: extract-links  package-list  package-list-huge  package-list-to-fake-json  previous-package-list-json  random-packages
tests/: conftest.py  integration_test.py  main_test.py
(+36691 files in other folders)
