[metadata]
name = dumb_pypi
version = 1.4.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chriskuehl/dumb-pypi
author = Chris Kuehl
author_email = ckuehl@ckuehl.me
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = dumb_pypi
install_requires =
    distlib
    jinja2
    packaging
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    dumb-pypi = dumb_pypi.main:main

[options.package_data]
dumb_pypi =
    templates/*

[wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
