[metadata]
name = dumb_pypi
version = 1.15.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chriskuehl/dumb-pypi
author = Chris Kuehl
author_email = ckuehl@ckuehl.me
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = dumb_pypi
install_requires =
    jinja2
    packaging>=20.9
python_requires = >=3.9

[options.entry_points]
console_scripts =
    dumb-pypi = dumb_pypi.main:main

[options.package_data]
dumb_pypi =
    templates/*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
